# imgui-studio

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.json  AGENTS.md  AGENT_TOOL_API.md  ANIMATION_SPEC.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  EXPORT_AND_INTEGRATION.md  INSPECTION_PROTOCOL.md  MVP_IMPLEMENTATION_PLAN.md  PRD.md  PROJECT_FORMAT.md  README.md  RUNTIME_API.md  SECURITY_MODEL.md  TECHNICAL_DESIGN.md  TEST_PLAN.md  THIRD_PARTY_DEPENDENCIES.json  THIRD_PARTY_NOTICES.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
apps/agent-adapter/: README.md
apps/agent-adapter/src/: main.ts  studio-client.ts
apps/studio-service/: README.md
apps/studio-service/src/: asset-manifest-validator.ts  build-coordinator.ts  comparison-service.ts  export-service.ts  filesystem.ts  http-server.ts  main.ts  preview-coordinator.ts  project-discovery.ts  project-service.ts  service-error.ts  types.ts  unified-diff.ts
apps/studio-web/: README.md  app.js  index.html  styles.css
benchmarks/: README.md
benchmarks/neon-reference/: benchmark.json  brief.md  rubric.md
components/: README.md
components/effects/: README.md
components/layout/: README.md
components/widgets/: README.md
docs/: architecture.md  development.md  getting-started.md  known-limitations.md  phase-0-completion.md  phase-1-completion.md  phase-2-completion.md  phase-3-completion.md  phase-4-completion.md  phase-5-completion.md  phase-6-completion.md  phase-7-readiness.md
docs/adr/: 0001-real-imgui-wasm-preview.md  0002-cpp-as-authoring-format.md  0003-webgl2-browser-backend.md  0004-deterministic-animation-clock.md  0005-portable-and-enhanced-rendering-tiers.md
docs/guides/: animation.md  custom-widget.md  integration.md
docs/operations/: local-service.md  toolchain.md
examples/: README.md
examples/native-parity/: README.md
examples/starter/: CMakeLists.txt  README.md  studio.project.json
examples/starter/assets/: assets.json
examples/starter/assets/licenses/: studio-mark.txt
examples/starter/include/studio_example/: components.hpp  menu.hpp  theme.hpp
examples/starter/references/: references.json
examples/starter/scenarios/: toggle-transition.scenario.json
examples/starter/src/: components.cpp  menu.cpp  studio_managed_theme.cpp
runtime/: CMakeLists.txt  README.md
runtime/browser/: CMakeLists.txt  README.md  main.cpp  shell.html
runtime/imgui-adapters/: README.md
runtime/include/studio/: animation.hpp  draw.hpp  inspection.hpp  runtime.hpp  studio.hpp  version.hpp  widget.hpp
runtime/native/: CMakeLists.txt  README.md  capture.cpp  capture.hpp  main.cpp
runtime/src/: README.md  runtime.cpp
schemas/: README.md
schemas/api/: build-record.schema.json  error.schema.json  export-record.schema.json
schemas/inspection/: capture-metadata.schema.json  comparison-report.schema.json  inspection.schema.json
schemas/project/: assets.schema.json  project.schema.json  references.schema.json
schemas/scenarios/: scenario.schema.json
scripts/: benchmark-evaluation.mjs  check-cpp-format.mjs  clean.mjs  compare-captures.mjs  generate-schemas.mjs  generate-third-party.mjs  run-cpp-tests.mjs  serve-preview.mjs  test-browser-preview.mjs  test-comparison.mjs  test-phase2-studio.mjs  verify-toolchain.mjs
scripts/lib/: capture-comparison.mjs
tests/: CMakeLists.txt  README.md
tests/fixtures/: README.md
tests/fixtures/browser/: app.js  index.html
tests/fixtures/schemas/invalid/: assets-invalid-id.json  build-record-status.json  capture-metadata-source.json  comparison-report-source.json  error-code.json  export-record-host-path.json  inspection-missing-frame.json  project-enhanced-tier.json  references-opacity.json  scenario-negative-time.json
tests/fixtures/schemas/valid/: assets.json  build-record.json  capture-metadata.json  comparison-report.json  error.json  export-record.json  inspection.json  project.json  references.json  scenario.json
tests/integration/: README.md  phase2-build.integration.ts  phase2-http.test.ts
tests/unit/cpp/: foundation_test.cpp
tests/unit/typescript/: agent-adapter.test.ts  project-service.test.ts  schema-contracts.test.ts  unified-diff.test.ts
tests/visual/: README.md
toolchain/: README.md  bootstrap-dependencies.ps1  bootstrap-emscripten.ps1  capture-native.ps1  run-native.ps1  toolchain.json  toolchain.schema.json
toolchain/cmake/: Dependencies.cmake  StudioWarnings.cmake
toolchain/emscripten/: build-preview.ps1  configure.ps1  service-build.ps1
